# trade-trace

./: .env.gate7.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PRD.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  VISION.md  cleanup-report-crosswalk.md  cleanup-report.md  next-steps.md  pyproject.toml
.beads/: metadata.json
.codex/: hooks.json
.github/workflows/: _test.yml  ci.yml  embeddings-smoke.yml  workflow.yml
.opencode/agent/: paper-trader.md
.opencode/command/: paper-cycle.md
audits/no-tech-debt-20260518/: advisor-gate-packet.md  bug-body-lint-repair-log.json  bughunt-crosslink-noise-repair.json  central-debt-matrix-summary.md  central-debt-matrix.json  coverage-ledger.jsonl  coverage-summary.json  domain-map.json  mutation-audit-postwrite.json  mutation-map-prewrite.json
docs/: AGENT_GUIDE.md  AI_AGENT_MCP_GETTING_STARTED.md  CLAUDE_CODE.md  CLAUDE_DESKTOP.md  CONSOLE.md  IDE_MCP_SETUP.md  LIVE_TEST_CHARTER.md  PRD.md  RELEASE_CHECKLIST.md  RELEASE_FINAL_GATE.md  RELEASE_HISTORY_REWRITE.md  RELEASE_NOTES.md  RELEASE_PROOF.md  VISION.md  tracelab-design.md
docs/architecture/: agent-continuity-contracts.md  agent-continuity-dogfood-runbook.md  agent-continuity-scorecard.md  agent-workbench-dogfood-evidence.md  autonomous-trader-substrate.md  bootstrap-caveat-glossary.md  cli-mcp-parity-agent-continuity.md  connector-interface.md  console-final-product-qa.md  console-ia-support-contract.md  console-release-gate.md  console-review.md  console-visual-review.md  console.md  contracts.md  current-exposure-agent-contract.md  derived-lifecycle.md  docs-taxonomy.md  dogfood-protocol.md  execution-design-review-gate.md  execution-isolation-contract.md  execution-safety-boundary.md  execution-safety-contracts.md  forecastbench-compatibility.md  http-sse-subscribe.md  imports.md  jsonl-replay-taxonomy.md  legacy-tool-disposition.md  logging.md  market-scan-contract.md  memory-layer.md  migrations-split-investigation.md  non-adapter-experimental-tool-disposition.md  operability.md  opportunity-analysis.md  persistence.md  phase-gates.md  pm-collapse-contract.md  policy-evidence-bundles.md  position-reopen-semantics.md  (+18 more)
docs/ax-dogfood/: 2026-06-03-ax-dogfood-loop-design.md  intentional-design.md  registry.md
docs/history/: next-steps.md
docs/plans/: 2026-05-20-hermes-dreamer-current-session-and-beads-closeout-plan.md  2026-05-21-trades-page-overhaul.md
docs/release-evidence/: v002-gate-7-live-20260526.md  v002-gate-7-sanitization-sweep-20260526.md  v002-gates-1-16-a55afc293e7e.md  v002-phase-5-multi-agent-dogfood-20260526.md  v002-phase-5-single-agent-dogfood-20260526.md
docs/tracelab/: run-config.json  run-config.md  stagger-schedule.md  trader-agent-profile.md
frontend/console/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
scripts/: catalog_census.py
scripts/ax-dogfood/: mcp.json  playbook.md  run.sh  setup.sh
scripts/paper-loop/: CHARTER.md  README.md  conventions.md  headless-settings.json  mcp.json  opencode-loop.sh  playbook.md  risk-policy-v1.json  run.sh  setup.sh
src/trade_trace/: __init__.py  _permissions.py  cli.py  clock.py  core.py  dispatch_trace.py  exporter.py  logging.py  mcp_server.py  playbook_predicates.py  projections.py  replay_fingerprint.py  timestamps.py  version.py
tests/: _direct_sql_builders.py  _mcp_helpers.py  clock.py  conftest.py  test_smoke.py  test_timestamps.py
tests/allowlists/: mhy1_legacy_grep_allowlist.json
tests/console_browser/: conftest.py  test_overview_smoke.py
tests/contracts/: test_agent_ergonomics.py  test_autonomous_substrate_contracts.py  test_autonomous_substrate_fixtures.py  test_cli_command_help.py  test_cli_name_uniqueness.py  test_cli_parse_kv_args.py  test_compiled_validator.py  test_console_chart_bootstrap.py  test_console_charting.py  test_console_dashboard_a11y.py  test_console_endpoints.py  test_console_http_routes.py  test_console_logs_page.py  test_console_pages.py  test_console_pagination.py  test_console_serve.py  test_console_shell.py  test_decision_add_matrix_guidance.py  test_dispatch_trace.py  test_envelope.py  test_event_enum_coverage.py  test_event_type_registry_alignment.py  test_experimental_catalog_tier.py  test_fetch_idempotency_schema_parity.py  test_grammar.py  test_idempotency_auto_derivation.py  test_import_cycles.py  test_json_schema_derivation.py  test_jsonl_replay_taxonomy.py  test_logging_contract.py  test_market_bind_display_minimal.py  test_mcp_schema_compat.py  test_metric_glossary.py  test_mhy1_legacy_grep_allowlist.py  test_min_sample_validation_parity.py  test_min_sample_validation_path.py  test_registry_handlers_are_callable.py  test_report_envelope_completeness.py  test_report_tool_registration_catalog.py  test_reporting_pagination.py  (+19 more)
tests/docs/: test_agent_continuity_scorecard_contract.py  test_agent_contract_examples_truthfulness.py  test_bootstrap_caveat_glossary.py  test_catalog_docs_truthfulness.py  test_legacy_tool_disposition_matrix.py  test_markdown_links.py  test_non_adapter_experimental_tool_disposition.py  test_period_review_contract.py  test_policy_evidence_bundle_contract.py  test_process_analytics_contract.py  test_release_docs_truthfulness.py  test_report_contract_conventions.py  test_scoring_docs_truthfulness.py  test_status_headers.py  test_strategy_performance_contract.py  test_vision_and_readme_no_hype.py
tests/golden/: test_bootstrap_caveat_glossary_packet.py  test_bootstrap_cold_start_breadcrumb.py  test_cli_mcp_parity.py  test_journal_status_parity.py  test_preflight_lifecycle_smoke.py
tests/integration/: _bootstrap_helpers.py  recall_quality_fixture.py  test_abstention.py  test_account_snapshots.py  test_adapter_perf_baseline.py  test_adapter_polymarket_no_rpc.py  test_adapter_polymarket_offline.py  test_admin_tools.py  test_agent_continuity_fixture.py  test_agent_continuity_provenance.py  test_agent_guided_loops_qorh.py  test_append_only.py  test_approval_ledger.py  test_audit_readiness.py  test_autonomous_records.py  test_autonomous_substrate_migration_fixtures.py  (+126 more)
(+772 files in other folders)
