[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-trace"
version = "0.0.1rc2"
description = "Local, open-source, AI-only journal, memory, and calibration substrate for LLM trading agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Trade Trace contributors" }]
dependencies = [
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
tt = "trade_trace.cli:main"
trade-trace = "trade_trace.cli:main"
trade-trace-mcp = "trade_trace.mcp_server:serve_stdio_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
