[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-trace"
dynamic = ["version"]
description = "Local, open-source, AI-only journal, memory, and calibration substrate for LLM trading agents."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Trade Trace contributors" }]
keywords = [
    "trading",
    "journal",
    "calibration",
    "mcp",
    "agents",
    "llm",
    "anthropic",
    "claude",
    "sqlite",
    "memory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.7,<3",
    # MCP is a first-class runtime dependency (trade-trace-o8j5). The
    # `[mcp]` extra below is preserved as an empty alias so existing
    # install recipes (`pip install trade-trace[mcp]`) keep working.
    "mcp>=1.0",
    # Imported directly by the stdio MCP boundary for JSON Schema validation;
    # keep it explicit rather than relying on the MCP SDK's transitive dep.
    "jsonschema>=4.0",
]

[project.optional-dependencies]
mcp = []  # back-compat alias; mcp is now a base runtime dependency
embeddings = ["sqlite-vec==0.1.6", "keyring>=25"]
# Console extra adds FastAPI + Uvicorn for the local read-only
# dashboard. The React/Vite app is built at release time and ships
# as static package data, so package users do not need Node.js.
console = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
# Console browser-test harness (trade-trace-1kkv.15). Operators
# run `pip install 'trade-trace[console,console-test]' && playwright
# install chromium` once; subsequent `pytest tests/console_browser/`
# runs the headless smoke suite. The separate `[console]` extra is
# required because the smoke harness starts `tt console serve`.
console-test = [
    "playwright>=1.45",
    "pytest-playwright>=0.5",
]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-jsonschema>=4.0",
    "build>=1.0",
    "twine>=6",
]

[project.scripts]
tt = "trade_trace.cli:main"
trade-trace = "trade_trace.cli:main"
trade-trace-mcp = "trade_trace.mcp_server:serve_stdio_main"

[project.urls]
Homepage = "https://github.com/mcrescenzo/trade-trace"
Repository = "https://github.com/mcrescenzo/trade-trace"
Issues = "https://github.com/mcrescenzo/trade-trace/issues"
Documentation = "https://github.com/mcrescenzo/trade-trace/tree/main/docs"
Changelog = "https://github.com/mcrescenzo/trade-trace/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Console ships the prebuilt React/Vite app as package data.
# Operators install `trade-trace[console]` to get the FastAPI/Uvicorn
# runtime; the app assets are present in every wheel.
"trade_trace.console" = ["static/**/*", "route_catalog.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.dynamic]
version = {attr = "trade_trace.version.__version__"}
